workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__shape__test__can_handle_add_shape_parameter__new_events.snap
---
source: workspaces/diff-engine/src/commands/shape.rs
expression: new_events
---
[
    ShapeParameterAdded(
        ShapeParameterAdded {
            shape_parameter_id: "shape_parameter_2",
            shape_id: "one_off_shape_1",
            name: "",
            shape_descriptor: ProviderInShape(
                ProviderInShape {
                    shape_id: "one_off_shape_1",
                    provider_descriptor: NoProvider(
                        NoProvider,
                    ),
                    consuming_parameter_id: "shape_parameter_2",
                },
            ),
            event_context: None,
        },
    ),
]
