workspaces/diff-engine/src/commands/snapshots/optic_diff_engine__commands__shape__test__can_handle_add_shape_parameter__unassignable_shape_parameter_id_result.snap
---
source: workspaces/diff-engine/src/commands/shape.rs
expression: unassignable_shape_parameter_id_result.unwrap_err()
---
Validation(
    "Command failed validation: shape parameter id must be assignable to add shape parameter, \"AddShapeParameter(AddShapeParameter { shape_parameter_id: \\\"shape_parameter_1\\\", shape_id: \\\"one_off_shape_1\\\", name: \\\"\\\" })\"",
)
